Create the first package version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(pc_bgev)
 export(pc_gev)
 export(pc_gp)
 export(pgev)
+export(plot_stats)
 export(qbgev)
 export(qgev)
 export(rbgev)
@@ -33,6 +34,7 @@ export(return_level_bgev)
 export(return_level_gev)
 export(rgev)
 export(standardise)
-export(un_standardise)
+export(tikz_plot)
 export(twcrps_bgev)
 export(twcrps_gev)
+export(un_standardise)
