Remove inla_gaussian_pars2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(pc_bgev)
 export(pc_gev)
 export(pc_gp)
 export(pgev)
+export(plot_grid)
+export(plot_on_map)
 export(plot_stats)
 export(qbgev)
 export(qgev)
