--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,13 @@ export(get_stats_for_standardisation)
 export(gev_fit)
 export(inla_bgev)
 export(inla_bgev_pars)
-export(inla_bgev_stats)
 export(inla_default_args)
 export(inla_gaussian_pars)
 export(inla_location_prior)
 export(inla_mesh)
 export(inla_spread_prior)
 export(inla_stack)
+export(inla_stats)
 export(inla_tail_prior)
 export(kld_bgev)
 export(kld_gev)
@@ -39,4 +39,5 @@ export(standardise)
 export(tikz_plot)
 export(twcrps_bgev)
 export(twcrps_gev)
+export(twostep_modelling)
 export(un_standardise)
