Add the scaled CRPS of David Bolin and Jonas Wallin
https://arxiv.org/pdf/1912.05642.pdf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ export(return_level_bgev)
 export(return_level_gev)
 export(rgev)
 export(standardise)
+export(stwcrps_bgev)
+export(stwcrps_gev)
 export(tikz_plot)
 export(twcrps_bgev)
 export(twcrps_gev)
