Update the StwCRPS calculations in the univariate simulation study

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(compute_data_stats)
 export(data_stats)
 export(dbgev)
 export(dgev)
+export(expected_twcrps_bgev)
 export(get_stats_for_standardisation)
 export(gev_fit)
 export(inla_bgev)
