--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,8 @@ export(data_stats)
 export(dbgev)
 export(dgev)
 export(expected_twcrps_bgev)
-export(get_stats_for_standardisation)
+export(get_gumbel_par)
+export(get_mean_and_sd_stats)
 export(gev_fit)
 export(inla_bgev)
 export(inla_bgev_pars)
@@ -13,6 +14,7 @@ export(inla_default_args)
 export(inla_gaussian_pars)
 export(inla_location_prior)
 export(inla_mesh)
+export(inla_multiple_sample_pars)
 export(inla_spread_prior)
 export(inla_stack)
 export(inla_stats)
@@ -38,9 +40,7 @@ export(return_level_gev)
 export(rgev)
 export(standardise)
 export(stwcrps_bgev)
-export(stwcrps_gev)
 export(tikz_plot)
 export(twcrps_bgev)
 export(twcrps_gev)
 export(twostep_modelling)
-export(un_standardise)
