--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(return_level_gev)
 export(rgev)
 export(standardise)
 export(stwcrps_bgev)
+export(style_map_plot)
 export(tikz_plot)
 export(twcrps_bgev)
 export(twostep_modelling)
