Fix a minor bug when computing CRPS for the bGEV

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,17 @@ export(compute_data_stats)
 export(data_stats)
 export(dbgev)
 export(dgev)
+export(expected_stwcrps_bgev)
 export(expected_twcrps_bgev)
 export(get_gumbel_par)
 export(get_mean_and_sd_stats)
+export(get_proj_xy)
 export(gev_fit)
 export(inla_bgev)
 export(inla_bgev_pars)
 export(inla_default_args)
 export(inla_gaussian_pars)
+export(inla_gev)
 export(inla_location_prior)
 export(inla_mesh)
 export(inla_multiple_sample_pars)
