--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(dbgev)
 export(dgev)
 export(expected_stwcrps_bgev)
 export(expected_twcrps_bgev)
+export(expected_twcrps_gev)
 export(get_gumbel_par)
 export(get_mean_and_sd_stats)
 export(get_proj_xy)
@@ -16,6 +17,7 @@ export(inla_bgev_pars)
 export(inla_default_args)
 export(inla_gaussian_pars)
 export(inla_gev)
+export(inla_gev_pars)
 export(inla_location_prior)
 export(inla_mesh)
 export(inla_multiple_sample_pars)
@@ -44,8 +46,11 @@ export(return_level_gev)
 export(rgev)
 export(standardise)
 export(stwcrps_bgev)
+export(stwcrps_gev)
 export(style_map_plot)
 export(tikz_plot)
 export(twcrps_bgev)
+export(twcrps_gev)
+export(twostep_gev)
 export(twostep_modelling)
 importFrom(magrittr,"%>%")
